--- a/templates/WebPage1.html
+++ b/templates/WebPage1.html
@@ -6,12 +6,13 @@
     <title></title>
 </head>
 <body>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.js"></script> 
     <script type="text/javascript">
 function on(){
-console.log("on");
+  $.get("/on")
 }
 function off(){
-console.log("off");
+  $.get("/off")
 }
     </script>
 
